--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
                 </ul>
             </div>
         </header>
+        <main class="main">
+            <section class="hero">
+                <div class="hero-box">
+                    <h1 class="hero-title">Award-winning custom designs and digital branding solutions</h1>
+                    <p class="hero-text">With over 10 years in the industry, we are experienced in creating fully
+                        responsive websites, app design, and engaging brand experiences. Find out more about our
+                        services.
+                    </p>
+                    <button class="hero-btn">Learn More</button>
+                </div>
+                <img src="./src/assets/svg/phone.svg" alt="phone">
+                <div class="hero-box-2"></div>
+            </section>
+        </main>
     </div>
 </body>
 
