--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                 <img src="./src/assets/svg/phone.svg" alt="phone">
                 <div class="hero-box-2"></div>
             </section>
+            <section class="project">
+                <img src="./src/assets/svg/web design.svg" alt="design">
+                <div>
+                    <img class="project-img-2" src="./src/assets/svg/app.svg" alt="app">
+                    <img src="./src/assets/svg/design.svg" alt="design">
+                </div>
+            </section>
         </main>
     </div>
 </body>
