--- a/index.html
+++ b/index.html
@@ -43,6 +43,31 @@
                     <img src="./src/assets/svg/design.svg" alt="design">
                 </div>
             </section>
+            <section class="info">
+                <ul class="info-list">
+                    <li class="info-item">
+                        <img class="info-img" src="./src/assets/svg/passionate.svg" alt="passionate">
+                        <h4 class="info-title">PASSIONATE</h4>
+                        <p class="info-text">Each project starts with an in-depth brand research to ensure we only
+                            create products that serve a purpose. We merge art, design, and technology into exciting new
+                            solutions.</p>
+                    </li>
+                    <li class="info-item">
+                        <img class="info-img" src="./src/assets/svg/recourceful.svg" alt="resourceful">
+                        <h4 class="info-title">RESOURCEFUL</h4>
+                        <p class="info-text">Everything that we do has a strategic purpose. We use an agile approach in
+                            all of our projects and value customer collaboration. It guarantees superior results that
+                            fulfill our clients’ needs.</p>
+                    </li>
+                    <li class="info-item">
+                        <img class="info-img" src="./src/assets/svg/frienly.svg" alt="friendly">
+                        <h4 class="info-title">FRIENDLY</h4>
+                        <p class="info-text"> We are a group of enthusiastic folks who know how to put people first. Our
+                            success depends on our customers, and we strive to give them the best experience a company
+                            can provide.</p>
+                    </li>
+                </ul>
+            </section>
         </main>
     </div>
 </body>
