--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
                     </li>
                 </ul>
             </section>
+            <section class="project-2">
+                <div class="project-2-box">
+                    <h2 class="project-2-title">Let’s talk about your project</h2>
+                    <p class="project-2-text">Ready to take it to the next level? Contact us today and find out how our
+                        expertise can help your business grow.</p>
+                </div>
+                <button class="project-2-btn">Get in touch</button>
+            </section>
         </main>
     </div>
 </body>
