--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
             </section>
         </main>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-box">
+                <div class="footer-box-2">
+                    <img src="./src/assets/svg/logo-white.svg" alt="logo-white">
+                    <h4 class="footer-title">DESIGNO</h4>
+                </div>
+                <div>
+                    <div class="footer-box-2">
+                        <ul class="footer-list">
+                            <li class="footer-item">
+                                <a class="footer-link" href="">OUR COMPANY</a>
+                            </li>
+                            <li class="footer-item">
+                                <a class="footer-link" href="">LOCATIONS</a>
+                            </li>
+                            <li class="footer-item">
+                                <a class="footer-link" href="">CONTACT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr class="footer-line">
+            <div class="footer-bottom-box">
+                <p class="footer-bottom-text">Designo Central Office
+                    3886 Wellington Street Toronto, Ontario M9C 3J5</p>
+                    <p class="footer-bottom-text-2">Contact Us (Central Office) P : +1 253-863-8967
+                        M : contact@designo.co</p>
+                        <img src="./src/assets/svg/footer-img.svg" alt="footer-img">
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
