--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div class="container">
+        <!-- HEADER-START -->
         <header class="header">
             <div class="header-box">
                 <img src="./src/assets/svg/logo-black.svg" alt="logo">
@@ -23,7 +24,11 @@
                 </ul>
             </div>
         </header>
+        <!-- HEADER-END -->
+
+        <!-- MAIN-START -->
         <main class="main">
+            <!-- HERO-START -->
             <section class="hero">
                 <div class="hero-box">
                     <h1 class="hero-title">Award-winning custom designs and digital branding solutions</h1>
@@ -36,6 +41,9 @@
                 <img src="./src/assets/svg/phone.svg" alt="phone">
                 <div class="hero-box-2"></div>
             </section>
+            <!-- HERO-END -->
+
+            <!-- PROJECT-START -->
             <section class="project">
                 <img src="./src/assets/svg/web design.svg" alt="design">
                 <div>
@@ -43,6 +51,9 @@
                     <img src="./src/assets/svg/design.svg" alt="design">
                 </div>
             </section>
+            <!-- PROJECT-END -->
+
+            <!-- INFO-START -->
             <section class="info">
                 <ul class="info-list">
                     <li class="info-item">
@@ -68,6 +79,9 @@
                     </li>
                 </ul>
             </section>
+            <!-- INFO-END -->
+
+            <!-- PROJECT-2-START -->
             <section class="project-2">
                 <div class="project-2-box">
                     <h2 class="project-2-title">Let’s talk about your project</h2>
@@ -76,8 +90,11 @@
                 </div>
                 <button class="project-2-btn">Get in touch</button>
             </section>
+            <!-- PROJECT-2-END -->
         </main>
+        <!-- MAIN-END -->
     </div>
+    <!-- FOOTER-START -->
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
@@ -111,6 +128,7 @@
             </div>
         </div>
     </footer>
+    <!-- FOOTER-END  -->
 </body>
 
 </html>
